scenarios/private_scenario/k8s_resources/elk/kibana-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  template:
    metadata:
      labels:
        io.kompose.network/odfe-net: "true"
        io.kompose.service: kibana
    spec:
      containers:
        - env:
            - name: ELASTICSEARCH_HOSTS
              value: https://10.0.0.110:9200
            - name: ELASTICSEARCH_URL
              value: https://10.0.0.110:9200
          image: amazon/opendistro-for-elasticsearch-kibana:1.12.0
          name: odfe-kibana
          ports:
            - containerPort: 5601
              name: kibana
      restartPolicy: Always
