scenarios/private_scenario/k8s_resources/elk/kibana-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kibana
  annotations:
    metallb.universe.tf/address-pool: elk
  name: kibana
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.200
  ports:
    - name: kibana-port
      port: 5601
      targetPort: kibana
  selector:
    io.kompose.service: kibana
