scenarios/private_scenario/k8s_resources/elk/odfe-node1-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: odfe-node1
  annotations:
    metallb.universe.tf/address-pool: elk
  name: odfe-node1
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.201
  ports:
    - name: elasticsearch-port
      port: 9200
      targetPort: elasticsearch
  selector:
    io.kompose.service: odfe-node1
