scenarios/private_scenario/k8s_resources/elk/odfe-net-networkpolicy.yaml
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: odfe-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/odfe-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/odfe-net: "true"
